crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F634_F634_basedpython.by.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F634 If test is a tuple, which is always `True`
 --> F634_basedpython.by:6:4
  |
4 |     pass
5 |
6 | if (3, 4):
  |    ^^^^^^
7 |     pass
8 | elif let (a, b) := (5, 6):
  |
