crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F821_F821_basedpython.by.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `C`
 --> F821_basedpython.by:7:9
  |
5 |     pass
6 |
7 | class C(C):
  |         ^
8 |     pass
  |

F821 Undefined name `Z`
  --> F821_basedpython.by:10:14
   |
 8 |     pass
 9 |
10 | class D(list[Z]):
   |              ^
11 |     pass
   |

F821 Undefined name `dynamic`
  --> F821_basedpython.by:19:7
   |
18 | # in value position `dynamic` is an ordinary name — still flagged when unbound
19 | print(dynamic)
   |       ^^^^^^^
20 |
21 | # `cast` / `cast?` are keyword operators, not name references — the synthetic
   |

F821 Undefined name `UndefinedType`
  --> F821_basedpython.by:27:21
   |
25 | ok_try = val cast? int
26 | # but an undefined *type* argument to the cast is still a real reference
27 | bad_cast = val cast UndefinedType
   |                     ^^^^^^^^^^^^^
28 |
29 | # `-> asserts x` names the place a call narrows, not a type: the name is the
   |

F821 Undefined name `UndefinedGuardType`
  --> F821_basedpython.by:45:43
   |
44 | # the type in `asserts x is T` is a real type reference — flagged when undefined
45 | def check_type(x: object) -> asserts x is UndefinedGuardType:
   |                                           ^^^^^^^^^^^^^^^^^^
46 |     raise ValueError
   |

F821 Undefined name `UndefinedMember`
  --> F821_basedpython.by:62:27
   |
60 | Defined = int
61 | good_protocol: protocol(a: Defined; def m(self, n: Defined) -> Defined)
62 | bad_protocol: protocol(a: UndefinedMember; def m(self) -> UndefinedReturn)
   |                           ^^^^^^^^^^^^^^^
63 |
64 | # a match type's `case` captures are type variables, and its bodies are type
   |

F821 Undefined name `UndefinedReturn`
  --> F821_basedpython.by:62:59
   |
60 | Defined = int
61 | good_protocol: protocol(a: Defined; def m(self, n: Defined) -> Defined)
62 | bad_protocol: protocol(a: UndefinedMember; def m(self) -> UndefinedReturn)
   |                                                           ^^^^^^^^^^^^^^^
63 |
64 | # a match type's `case` captures are type variables, and its bodies are type
   |

F821 Undefined name `UndefinedBound`
  --> F821_basedpython.by:73:20
   |
71 |         (NDTuple[T, *Rest],) * Dim
72 |
73 | type BadBound[*Ts: UndefinedBound] = tuple[*Ts]
   |                    ^^^^^^^^^^^^^^
   |
