crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F841_F841_basedpython.by.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F841 [*] Local variable `plain` is assigned to but never used
  --> F841_basedpython.by:21:5
   |
19 | def mixed() -> str:
20 |     context typed: str = "hello"
21 |     plain = "dead"  # F841
   |     ^^^^^
22 |     return f()
   |
help: Remove assignment to unused variable `plain`
   |
20 |     context typed: str = "hello"
   -     plain = "dead"  # F841
21 |     return f()
   |
note: This is an unsafe fix and may change runtime behavior
