crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__undefined-name_F821_basedpython.by.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `C`
 --> F821_basedpython.by:7:9
  |
5 |     pass
6 |
7 | class C(C):
  |         ^
8 |     pass
  |

F821 Undefined name `Z`
  --> F821_basedpython.by:10:14
   |
 8 |     pass
 9 |
10 | class D(list[Z]):
   |              ^
11 |     pass
   |

F821 Undefined name `dynamic`
  --> F821_basedpython.by:19:7
   |
18 | # in value position `dynamic` is an ordinary name — still flagged when unbound
19 | print(dynamic)
   |       ^^^^^^^
20 |
21 | # `cast` / `cast?` are keyword operators, not name references — the synthetic
   |

F821 Undefined name `UndefinedType`
  --> F821_basedpython.by:27:21
   |
25 | ok_try = val cast? int
26 | # but an undefined *type* argument to the cast is still a real reference
27 | bad_cast = val cast UndefinedType
   |                     ^^^^^^^^^^^^^
28 |
29 | # `-> asserts x` names the place a call narrows, not a type: the name is the
   |

F821 Undefined name `UndefinedNegatedType`
  --> F821_basedpython.by:49:48
   |
47 |     return True
48 |
49 | def not_guard_undefined(x: object) -> x is not UndefinedNegatedType:
   |                                                ^^^^^^^^^^^^^^^^^^^^
50 |     return True
   |

F821 Undefined name `UndefinedGuardType`
  --> F821_basedpython.by:53:43
   |
52 | # the type in `asserts x is T` is a real type reference — flagged when undefined
53 | def check_type(x: object) -> asserts x is UndefinedGuardType:
   |                                           ^^^^^^^^^^^^^^^^^^
54 |     raise ValueError
   |

F821 Undefined name `UndefinedMember`
  --> F821_basedpython.by:70:27
   |
68 | Defined = int
69 | good_protocol: protocol(a: Defined; def m(self, n: Defined) -> Defined)
70 | bad_protocol: protocol(a: UndefinedMember; def m(self) -> UndefinedReturn)
   |                           ^^^^^^^^^^^^^^^
71 |
72 | # a match type's `case` captures are type variables, and its bodies are type
   |

F821 Undefined name `UndefinedReturn`
  --> F821_basedpython.by:70:59
   |
68 | Defined = int
69 | good_protocol: protocol(a: Defined; def m(self, n: Defined) -> Defined)
70 | bad_protocol: protocol(a: UndefinedMember; def m(self) -> UndefinedReturn)
   |                                                           ^^^^^^^^^^^^^^^
71 |
72 | # a match type's `case` captures are type variables, and its bodies are type
   |

F821 Undefined name `UndefinedBound`
  --> F821_basedpython.by:81:20
   |
79 |         (NDTuple[T, *Rest],) * Dim
80 |
81 | type BadBound[*Ts: UndefinedBound] = tuple[*Ts]
   |                    ^^^^^^^^^^^^^^
82 |
83 | # a pack's bound is a type expression wherever it appears, so names inside the
   |

F821 Undefined name `UndefinedElement`
  --> F821_basedpython.by:85:29
   |
83 | # a pack's bound is a type expression wherever it appears, so names inside the
84 | # starred whole-pack forms and a keyword-variadic pack's bound resolve too
85 | type WholeTuple[*Ts: *(int, UndefinedElement)] = tuple[*Ts]
   |                             ^^^^^^^^^^^^^^^^
86 | type EveryField[**Kwargs: UndefinedFieldBound] = int
87 | type WholeShape[**Kwargs: **{"a": UndefinedField}] = int
   |

F821 Undefined name `UndefinedFieldBound`
  --> F821_basedpython.by:86:27
   |
84 | # starred whole-pack forms and a keyword-variadic pack's bound resolve too
85 | type WholeTuple[*Ts: *(int, UndefinedElement)] = tuple[*Ts]
86 | type EveryField[**Kwargs: UndefinedFieldBound] = int
   |                           ^^^^^^^^^^^^^^^^^^^
87 | type WholeShape[**Kwargs: **{"a": UndefinedField}] = int
88 | type BoundsAreFine[*Ts: *(int, str), **Kwargs: **{"a": int}] = int
   |

F821 Undefined name `UndefinedField`
  --> F821_basedpython.by:87:35
   |
85 | type WholeTuple[*Ts: *(int, UndefinedElement)] = tuple[*Ts]
86 | type EveryField[**Kwargs: UndefinedFieldBound] = int
87 | type WholeShape[**Kwargs: **{"a": UndefinedField}] = int
   |                                   ^^^^^^^^^^^^^^
88 | type BoundsAreFine[*Ts: *(int, str), **Kwargs: **{"a": int}] = int
   |

F821 Undefined name `Protocol`
  --> F821_basedpython.by:96:15
   |
94 | implicit_value = Optional
95 | # a `typing` member basedpython does *not* auto-import is still flagged
96 | not_implicit: Protocol
   |               ^^^^^^^^
97 |
98 | # `Some` is the present-case optional constructor, lowered to the injected
   |

F821 Undefined name `Character`
   --> F821_basedpython.by:107:7
    |
105 | overlapping_arg: Overlapping[int]
106 | # in value position they are ordinary names — still flagged when unbound
107 | print(Character, Overlapping)
    |       ^^^^^^^^^
108 |
109 | # the return-value markers are decorators, implicitly available where a value is
    |

F821 Undefined name `Overlapping`
   --> F821_basedpython.by:107:18
    |
105 | overlapping_arg: Overlapping[int]
106 | # in value position they are ordinary names — still flagged when unbound
107 | print(Character, Overlapping)
    |                  ^^^^^^^^^^^
108 |
109 | # the return-value markers are decorators, implicitly available where a value is
    |

F821 Undefined name `ignorable_return_value`
   --> F821_basedpython.by:122:17
    |
121 | # in a type position they are ordinary names — flagged when unbound
122 | marker_as_type: ignorable_return_value  # F821
    |                 ^^^^^^^^^^^^^^^^^^^^^^
123 |
124 | # known gap: an enum member reached by context-sensitive resolution is an
    |

F821 Undefined name `Bleu`
   --> F821_basedpython.by:148:19
    |
147 | chosen: Colour = Green
148 | missing: Colour = Bleu  # F821
    |                   ^^^^

F821 Undefined name `a_receiver_member`
   --> F821_basedpython.by:170:1
    |
169 | # but the deferral stops at the block: the same name outside one is reported
170 | a_receiver_member("x")  # F821
    | ^^^^^^^^^^^^^^^^^

F821 Undefined name `UndefinedPattern`
   --> F821_basedpython.by:201:12
    |
199 | # an unbound name inside a pattern is still reported
200 | def undefined_in_pattern(value: object) -> None:
201 |     if let UndefinedPattern(captured) := value:  # F821
    |            ^^^^^^^^^^^^^^^^
202 |         print(captured)
    |

F821 Undefined name `UndefinedInterface`
   --> F821_basedpython.by:225:32
    |
223 | # the extended type is looked up rather than resolved, so an undefined one is a
224 | # known gap here — `by check` reports it as an unresolved type
225 | extension UndefinedImplemented(UndefinedInterface):  # F821
    |                                ^^^^^^^^^^^^^^^^^^
226 |     pass
    |

F821 Undefined name `bare_name`
   --> F821_basedpython.by:245:21
    |
244 | # but the suppression is only for that shape, so each of these is still reported
245 | Book.objects.filter(bare_name)  # F821
    |                     ^^^^^^^^^
246 | Book.objects.annotate(not_a_lookup_method.x == 1)  # F821
247 | Book.objects.filter(data[undefined_index] == 1)  # F821
    |

F821 Undefined name `not_a_lookup_method`
   --> F821_basedpython.by:246:23
    |
244 | # but the suppression is only for that shape, so each of these is still reported
245 | Book.objects.filter(bare_name)  # F821
246 | Book.objects.annotate(not_a_lookup_method.x == 1)  # F821
    |                       ^^^^^^^^^^^^^^^^^^^
247 | Book.objects.filter(data[undefined_index] == 1)  # F821
248 | Book.objects.filter(no_lookup_for_ne != 1)  # F821
    |

F821 Undefined name `undefined_index`
   --> F821_basedpython.by:247:26
    |
245 | Book.objects.filter(bare_name)  # F821
246 | Book.objects.annotate(not_a_lookup_method.x == 1)  # F821
247 | Book.objects.filter(data[undefined_index] == 1)  # F821
    |                          ^^^^^^^^^^^^^^^
248 | Book.objects.filter(no_lookup_for_ne != 1)  # F821
    |

F821 Undefined name `no_lookup_for_ne`
   --> F821_basedpython.by:248:21
    |
246 | Book.objects.annotate(not_a_lookup_method.x == 1)  # F821
247 | Book.objects.filter(data[undefined_index] == 1)  # F821
248 | Book.objects.filter(no_lookup_for_ne != 1)  # F821
    |                     ^^^^^^^^^^^^^^^^

F821 Undefined name `UndefinedRaised`
   --> F821_basedpython.by:253:31
    |
251 | # a `raises` clause is an ordinary type expression, so an undefined name written
252 | # there is a real reference and is reported
253 | def raises_undefined() raises UndefinedRaised:  # F821
    |                               ^^^^^^^^^^^^^^^
254 |     raise ValueError
    |
