crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__unused-variable_F841_basedpython.by.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F841 [*] Local variable `plain` is assigned to but never used
  --> F841_basedpython.by:21:5
   |
19 | def mixed() -> str:
20 |     context typed: str = "hello"
21 |     plain = "dead"  # F841
   |     ^^^^^
22 |     return f()
   |
help: Remove assignment to unused variable `plain`
   |
20 |     context typed: str = "hello"
   -     plain = "dead"  # F841
21 |     return f()
   |
note: This is an unsafe fix and may change runtime behavior

F841 Local variable `Unmatched` is assigned to but never used
  --> F841_basedpython.by:44:14
   |
42 | def ordinary_capture(value: object) -> int:
43 |     match value:
44 |         case Unmatched:  # F841
   |              ^^^^^^^^^
45 |             return 1
46 |         case _:
   |
help: Remove assignment to unused variable `Unmatched`

F841 Local variable `k` is assigned to but never used
  --> F841_basedpython.by:78:21
   |
76 | # what python's own capture pattern does, so an unused capture still fires
77 | def matching_binders(p: Point) -> int:
78 |     if let Point(j, k) := p:  # F841 on `k`
   |                     ^
79 |         return j
80 |     match p:
   |
help: Remove assignment to unused variable `k`

F841 Local variable `m` is assigned to but never used
  --> F841_basedpython.by:81:23
   |
79 |         return j
80 |     match p:
81 |         case Point(l, m):  # F841 on `m`
   |                       ^
82 |             return l
83 |     return 0
   |
help: Remove assignment to unused variable `m`
